# medical-diagnosis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
config/: cnn.yml  densnet.yml  efficientnet_v2.yml  resnet.yml  swin.yml  train.yml  vit.yml
scripts/: download_datasets.sh
src/expt/: config.py  loss.py  main.py  model.py  utils.py
src/expt/data/: __init__.py  dataset.py  transform.py
src/expt/eval/: EDA.py  logger.py
tests/: conftest.py  test_config.py  test_data.py  test_env.py
