[project]
name = "medical-diagnosis"
description = "Medical Diagnosis with Transfer Learning"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "A.J.Zeller", email = "hello@atticux.me" }]
maintainers = [{ name = "A.J.Zeller", email = "hello@atticux.me" }]
dynamic = ["version"] # https://hatch.pypa.io/latest/config/metadata/#version
dependencies = [
    "kornia>=0.8.0",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.3",
    "timm>=1.0.14",
    "torch>= 2.1,<= 2.9.1",
    "torchmetrics>=1.6.1",
    "torchvision>=0.19.0",
    "typer>=0.15.1",
    "wandb[sweeps]>=0.19.5",
]

[project.optional-dependencies]
# optional deps for package installation

[dependency-groups]
dev = [
    "ruff>=0.6.3",                   # Linting
    "mypy>=1.11.2",                  # Type checking
    "pre-commit>=3.8.0",             # Pre-commit hooks
    "pytest>=8.3.2",                 # Testing framework
    "pytest-sugar>=1.0.0",           # Nicer pytest output
    "types-pyyaml>=6.0.12.20241230",
    "git-cliff>=2.8.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name     = "pytorch-cu126"
url      = "https://download.pytorch.org/whl/cu126"
explicit = true

## Test
[tool.mypy]
strict                 = false
ignore_missing_imports = true                       # ignore missing type hints in third-party libs
exclude                = ["venv", ".venv", "data/"] # ignore dataset preprocessing type checking

[tool.pytest.ini_options]
# Set additional command line options for pytest=
# -r= show extra test summary info
# X= show extra info on xfailed tests
# s= don't capture stdout (allow print statements)
# --strict-config= any warnings about configuration are treated as errors
# --strict-markers= treat unregistered markers as errors
addopts        = "-rXs --strict-config --strict-markers"
xfail_strict   = true                                    # Treat tests that are marked as xfail but pass as test failures
filterwarnings = ["error"]                               # Treat all warnings as errors
pythonpath     = "src/"

## Linter and formatter
[tool.ruff]
# cover and extend the default config in https=//docs.astral.sh/ruff/configuration/
extend-exclude = [""]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

isort = { combine-as-imports = true, split-on-trailing-comma = false }

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.format]
docstring-code-format     = true
skip-magic-trailing-comma = true

# Reference
# 1. https=//github.com/Kludex/python-template/blob/main/template/%7B%7B%20project_slug%20%7D%7D/pyproject.toml.jinja
# 2. https=//github.com/fastapi/full-stack-fastapi-template/blob/master/backend/pyproject.toml
# 3. https=//github.com/pydantic/logfire
# 4. https=//coverage.readthedocs.io/en/latest/index.html
